<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Excercise field -->
            <EditText
                android:id="@+id/edit_habit_excercise"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_habit_excercise"
                android:inputType="textCapWords"/>

            <!-- Praying field -->
            <EditText
                android:id="@+id/edit_habit_praying"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_habit_praying"
                android:inputType="textCapWords"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Smoking category -->
    <LinearLayout
        android:id="@+id/container_eating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_eating"/>

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Eating drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_eating"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_pieces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_numbers"/>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_habit_smoking"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_habit_smoking"
                android:inputType="number"/>

            <!-- number of smoke in peieces (kg) -->
            <TextView
                android:id="@+id/label_smoking_pieces"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_habit_smoking"/>


        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
